--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
 		"@types/react": "18.3.5",
 		"@types/react-dom": "18.3.0",
 		"@vitejs/plugin-react": "4.3.1",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.10",
 		"jsdom": "25.0.0",
 		"postcss": "8.4.45",
 		"tailwindcss": "3.4.11",
