--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"typecheck": "tsc",
-		"format": "biome format --write .",
+		"format": "biome format --write ./**",
 		"test": "vitest"
 	},
 	"dependencies": {
