--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.1",
 		"lodash": "4.17.21",
-		"lucide-react": "0.439.0",
-		"next": "15.0.0-rc.0",
+		"lucide-react": "0.441.0",
+		"next": "canary",
 		"next-auth": "5.0.0-beta.20",
 		"next-themes": "0.3.0",
-		"react": "19.0.0-rc-e210d081-20240909",
-		"react-dom": "19.0.0-rc-e210d081-20240909",
+		"react": "19.0.0-rc-206df66e-20240912",
+		"react-dom": "19.0.0-rc-206df66e-20240912",
 		"server-only": "0.0.1",
 		"sonner": "1.5.0",
 		"tailwind-merge": "2.5.2",
@@ -38,7 +38,7 @@
 		"zod": "3.23.8"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.8.3",
+		"@biomejs/biome": "1.9.0",
 		"@testing-library/jest-dom": "6.5.0",
 		"@testing-library/react": "16.0.1",
 		"@types/lodash": "4.17.7",
@@ -46,14 +46,14 @@
 		"@types/react": "18.3.5",
 		"@types/react-dom": "18.3.0",
 		"@vitejs/plugin-react": "4.3.1",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.10",
+		"eslint": "8.57.0",
+		"eslint-config-next": "canary",
 		"jsdom": "25.0.0",
 		"postcss": "8.4.45",
 		"tailwindcss": "3.4.11",
 		"typescript": "5.6.2",
 		"vite-tsconfig-paths": "5.0.1",
-		"vitest": "2.0.5"
+		"vitest": "2.1.1"
 	},
 	"packageManager": "pnpm@9.10.0"
 }
