--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@radix-ui/react-select": "2.1.1",
 		"@radix-ui/react-slot": "1.1.0",
 		"@radix-ui/react-tabs": "1.1.0",
+		"@radix-ui/react-tooltip": "1.1.2",
 		"@spotify/web-api-ts-sdk": "1.2.0",
 		"@t3-oss/env-nextjs": "0.11.1",
 		"@types/spotify-web-api-node": "5.0.11",
