--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"next": "canary",
 		"next-auth": "5.0.0-beta.20",
 		"next-themes": "0.3.0",
+		"nuqs": "1.19.1",
 		"react": "19.0.0-rc-206df66e-20240912",
 		"react-dom": "19.0.0-rc-206df66e-20240912",
 		"server-only": "0.0.1",
