--- a/package.json
+++ b/package.json
@@ -41,18 +41,18 @@
 		"zod": "3.23.8"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.0",
+		"@biomejs/biome": "1.9.1",
 		"@testing-library/jest-dom": "6.5.0",
 		"@testing-library/react": "16.0.1",
 		"@types/lodash": "4.17.7",
-		"@types/node": "22.5.4",
-		"@types/react": "18.3.5",
-		"@types/react-dom": "18.3.0",
+		"@types/node": "22.5.5",
+		"@types/react": "npm:types-react@rc",
+		"@types/react-dom": "npm:types-react-dom@rc",
 		"@vitejs/plugin-react": "4.3.1",
 		"eslint": "8.57.0",
 		"eslint-config-next": "canary",
 		"jsdom": "25.0.0",
-		"postcss": "8.4.45",
+		"postcss": "8.4.47",
 		"tailwindcss": "3.4.11",
 		"typescript": "5.6.2",
 		"vite-tsconfig-paths": "5.0.1",
